--- a/index.html
+++ b/index.html
@@ -8,40 +8,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">Wordle Clone</h1>
-    <section class="game-container">
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-        <input type="text" maxlength="1" class="char-input" readonly>
-    </section>
-
+    <div id="loadingScreen">Loading, please wait...</div>
+    <div id="content">
+        <h1 class="title">Wordle Clone</h1>
+        <section class="game-container">
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+            <input type="text" maxlength="1" class="char-input" readonly>
+        </section>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
